[package]
name = "roon-tui"
version = "0.0.1"
authors = ["The Appgineer <theappgineer@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/theappgineer/roon-tui"
publish = false

[dependencies]
log = "0.4"
ratatui = { version = "0.22.0", features = ["crossterm"], default-features = false }
crossterm = "0.26.1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"

